--- a/contrib/man/host-metering.1
+++ b/contrib/man/host-metering.1
@@ -23,18 +23,13 @@ Default is /etc/host-metering.conf
 .PP
 
 \fBHTTP_PROXY\fR
-Represents the value of the HTTP_PROXY or
-http_proxy environment variable. It will be used as the proxy
-URL for HTTP requests unless overridden by NO_PROXY.
+Will be used as the proxy URL for HTTP requests unless overridden by NO_PROXY.
 
 \fBHTTPS_PROXY\fR
-Represents the HTTPS_PROXY or https_proxy
-environment variable. It will be used as the proxy URL for
-HTTPS requests unless overridden by NoProxy.
+Will be used as the proxy URL for HTTPS requests unless overridden by NO_PROXY.
 
 \fBNO_PROXY\fR
-Represents the NO_PROXY or no_proxy environment
-variable. It specifies a string that contains comma-separated values
+Specifies a string that contains comma-separated values
 specifying hosts that should be excluded from proxying. Each value is
 represented by an IP address prefix (1.2.3.4), an IP address prefix in
 CIDR notation (1.2.3.4/8), a domain name, or a special DNS label (*).
