feat: add send_hostname configuration option
And its HOST_METERING_SEND_HOSTNAME env var couterpart.

Possible values and meaning:
- yes: display_name label should be sent
- no: display_name label should not be sent
- undefined or unexpected value: display_name label should be sent

https://issues.redhat.com/browse/HMS-3264

Signed-off-by: Petr Vobornik <pvoborni@redhat.com>

--- a/contrib/man/host-metering.1
+++ b/contrib/man/host-metering.1
@@ -62,6 +62,9 @@ Interval between collecting host metrics in seconds.
 \fBHOST_METERING_LABEL_REFRESH_INTERVAL_SEC\fR
 Interval between refreshing host labels in seconds.
 
+\fBHOST_METERING_SEND_HOSTNAME\fR
+Send hostname to remote server. By default \fByes\fR set to \fBno\fR to disable.
+
 \fBHOST_METERING_WRITE_RETRY_ATTEMPTS\fR
 Number of write attempts to remote server.
 
