--- a/contrib/man/host-metering.conf.5
+++ b/contrib/man/host-metering.conf.5
@@ -51,6 +51,12 @@ Interval between refreshing host labels in seconds.
 .RE
 
 .PP
+send_hostname (string)
+.RS 4
+Send hostname to remote server. By default \fByes\fR set to \fBno\fR to disable.
+.RE
+
+.PP
 write_retry_attempts (integer)
 .RS 4
 Number of write attempts to remote server.
