feat: add optional InstanceID field to log output
Add an optional instanceID field to log output for distinguishing multiple
running host-metering instances from each other during development.

Signed-off-by: ccowman <ccowman@redhat.com>

--- a/contrib/man/host-metering.1
+++ b/contrib/man/host-metering.1
@@ -89,6 +89,9 @@ Log level. Possible values are: DEBUG, INFO, WARN, ERROR, TRACE.
 \fBHOST_METERING_LOG_PATH\fR
 Path to log file. Default is empty - stderr.
 
+\fBHOST_METERING_INSTANCE_ID\fR
+Instance id. Default is empty.
+
 .SH "FILES"
 .PP
 \fI/etc/host-metering.conf\fR
