--- a/contrib/man/host-metering.conf.5
+++ b/contrib/man/host-metering.conf.5
@@ -104,6 +104,11 @@ log_path (string)
 Path to log file. Default is empty - stderr.
 .RE
 
+.PP
+instance_id (string)
+.RS 4
+Instance id. Default is empty.
+
 .SH "EXAMPLES"
 .PP
 1\&. The following example shows how to switch the logging to DEBUG level\&.
