--- a/contrib/man/host-metering.conf.5
+++ b/contrib/man/host-metering.conf.5
@@ -95,7 +95,7 @@ Path to directory where write ahead log files are stored.
 .PP
 log_level (string)
 .RS 4
-Log level. Possible values are: DEBUG, INFO, WARN, ERROR, TRACE.
+Log level. Possible values are: DEBUG, INFO, WARN, ERROR.
 .RE
 
 .PP
