docs: fix typos and remove refs to redundant code
Fix typos and remove references to no longer existing code
in comments to improve readability

Signed-off-by: ccowman <ccowman@redhat.com>

--- a/contrib/man/host-metering.1
+++ b/contrib/man/host-metering.1
@@ -84,7 +84,7 @@ Maximum age of collected metrics in seconds. After the time, the metrics are dro
 Path to directory where write ahead log files are stored.
 
 \fBHOST_METERING_LOG_LEVEL\fR
-Log level. Possible values are: DEBUG, INFO, WARN, ERROR, TRACE.
+Log level. Possible values are: DEBUG, INFO, WARN, ERROR.
 
 \fBHOST_METERING_LOG_PATH\fR
 Path to log file. Default is empty - stderr.
